cilium/http-sw-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deathstar
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    org: empire
    class: deathstar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deathstar
spec:
  selector:
    matchLabels:
      org: empire
      class: deathstar
  template:
    metadata:
      labels:
        org: empire
        class: deathstar
    spec:
      containers:
      - name: deathstar
        image: localhost:32000/mod_starwars:k8s
        imagePullPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: tiefighter
  labels:
    org: empire
    class: tiefighter
spec:
  containers:
  - name: spaceship
    image: localhost:32000/mod_ship:k8s
    imagePullPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: xwing
  labels:
    org: alliance
    class: xwing
spec:
  containers:
  - name: spaceship
    image: localhost:32000/mod_ship:k8s
    imagePullPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: deathstarftp1
  labels:
    org: empire
    class: storage
spec:
  containers:
  - name: elogstore
    image: docker.io/stilliard/pure-ftpd:hardened
    imagePullPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: deathstarftp2
  labels:
    org: alliance
    class: storage
spec:
  containers:
  - name: alogstore
    image: docker.io/stilliard/pure-ftpd:hardened
    imagePullPolicy: Always
