cilium/pets_app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: petstore
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    org: store
    class: petstore
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petstore
spec:
  selector:
    matchLabels:
      org: store
      class: petstore
  template:
    metadata:
      labels:
        org: store
        class: petstore
    spec:
      containers:
      - name: petstore1
        image: localhost:32000/test_pets:k8s
        imagePullPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: wrk2
  labels:
    org: loadtester
spec:
  containers:
  - name: wrk2
    image: docker.io/bootjp/wrk2
