cilium/sw_policy_2.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "L3-L4 policy to restrict deathstar access to empire ships only"
metadata:
  name: "rule1"
spec:
  endpointSelector:
    matchLabels:
      org: store
      class: petstore
  ingress:
  - fromEndpoints:
    - matchLabels:
        org: loadtester
#    toPorts:
#    - ports:
#      - port: "8080"
#        protocol: "TCP"
#      rules:
#        http:
#          - method: "GET"
#            path: "/v2/"
